ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/enable-cors: "true"
    # timeouts websocket
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"

    nginx.ingress.kubernetes.io/websocket-services: "game"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    # nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"

spec:
  ingressClassName: nginx
  tls:
  - secretName: frontend-ssl-cert
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 443
      - path: /game
        pathType: Prefix
        backend:
          service:
            name: matchmaking
            port:
              number: 8001
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 8080
      - path: /ws
        pathType: Prefix
        backend:
          service:
            name: game
            port:
              number: 8000
